fix: scrollbar is not visible on page elements

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -173,15 +173,6 @@ a:active {
   box-sizing: border-box;
 }
 
-
-
-
-.hide-scrollbar {
-  ::-webkit-scrollbar {
-    display: none;
-  }
-}
-
 .notistack-Snackbar {
   min-width: unset;
   width: fit-content;
